--- a/views/tech-single.ejs
+++ b/views/tech-single.ejs
@@ -72,18 +72,18 @@
                             <div class="blog-title-area text-center">
                                 <ol class="breadcrumb hidden-xs-down">
                                     <li class="breadcrumb-item"><a href="/">Home</a></li>
-                                    <li class="breadcrumb-item"><a href="#">Blog</a></li>
+                                    <li class="breadcrumb-item"><a href="/">Blog</a></li>
                                     <li class="breadcrumb-item active"><%=data.title%></li>
                                 </ol>
 
-                                <span class="color-orange " ><a href="tech-category-01.html" title=""><%=data.tag.toUpperCase()%></a></span>
+                                <span class="color-orange " ><a href="/" title=""><%=data.tag.toUpperCase()%></a></span>
 
                                 <h3><%=data.title%></h3>
 
                                 <div class="blog-meta big-meta">
-                                    <small><a href="/single" title=""><%=data.date.toDate().toString().slice(0,24)%></a></small>
-                                    <small><a href="/author" title="">by <%=author.name%></a></small>
-                                    <small><a href="#" title=""><i class="fa fa-eye"></i> <%=data.views%></a></small>
+                                    <small><%=data.date.toDate().toString().slice(0,24)%></small>
+                                    <small>by <%=author.name%></small>
+                                    <small><i class="fa fa-eye"></i> <%=data.views%></small>
                                 </div><!-- end meta -->
 
                                 <div class="post-sharing">
@@ -187,15 +187,19 @@
                                 <h4 class="small-title">About author</h4>
                                 <div class="row">
                                     <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
-                                        <img width="100" height="100" src="<%=author.profilePic%>" alt="" class="img-fluid rounded-circle" > 
+                                        <img width="100px" height="100px" src="<%=author.profilePic%>" alt="" class="img-fluid rounded-circle" > 
                                     </div><!-- end col -->
 
-                                    <div class="col-lg-10 col-md-10 col-sm-10 col-xs-12">
-                                        <h4><a href="#"><%=author.name%></a></h4>
+                                    <div class="col-lg-10 col-md-10 col-sm-10 col-xs-12 mt-sm-3 ml-2">
+                                        <h4><%=author.name%></h4>
                                         <p>
                                             <%-author.desc%>
                                         </p>
-
+                                        <div class="topsocial ">
+                                            
+                                            <a href="<%=author.insta%>" data-toggle="tooltip" data-placement="bottom" title="Instagram"><i style="font-size: 18px;"class="fa fa-instagram"></i></a>
+                                            <a href="<%=author.linkedin%>" data-toggle="tooltip" data-placement="bottom" title="Linkedin"><i style="font-size: 18px;" class="fa fa-linkedin"></i></a>
+                                        </div><!-- end social -->
                                        
                                     </div><!-- end col -->
                                 </div><!-- end row -->
