--- a/views/tech-single.ejs
+++ b/views/tech-single.ejs
@@ -190,12 +190,12 @@
                                         <img width="100px" height="100px" src="<%=author.profilePic%>" alt="" class="img-fluid rounded-circle" > 
                                     </div><!-- end col -->
 
-                                    <div class="col-lg-10 col-md-10 col-sm-10 col-xs-12 mt-sm-3 ml-2">
-                                        <h4><%=author.name%></h4>
+                                    <div class="col-lg-10 col-md-10 col-sm-10 col-xs-12 mt-3 ml-2">
+                                        <h4 style="font-weight: bold;"><%=author.name%></h4>
                                         <p>
                                             <%-author.desc%>
                                         </p>
-                                        <div class="topsocial ">
+                                        <div class="topsocial ml-3">
                                             
                                             <a href="<%=author.insta%>" data-toggle="tooltip" data-placement="bottom" title="Instagram"><i style="font-size: 18px;"class="fa fa-instagram"></i></a>
                                             <a href="<%=author.linkedin%>" data-toggle="tooltip" data-placement="bottom" title="Linkedin"><i style="font-size: 18px;" class="fa fa-linkedin"></i></a>
