REVIEW TO BLOG PAGE

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -123,7 +123,7 @@
                                             <div class="blog-meta big-meta col-md-8">
                                                 <h4><a href="/single?id=<%=data[i].id%>" title=""><%=data[i].title%></a></h4>
                                                 <p><%=data[i].short%></p>
-                                                <small class="firstsmall"><a class="bg-orange" href="/gadget" title=""><%=data[i].tag%></a></small>
+                                                <small class="firstsmall"><a class="bg-orange" href="/" title=""><%=data[i].tag%></a></small>
                                                 <small><a href="/single?id=<%=data[i].id%>" title=""><%=data[i].date.toDate().toString().slice(0,24)%></a></small>
                                                 <small><a href="/single?id=<%=data[i].id%>" title="">by <%=data[i].by%></a></small>
                                                 <small><a href="/single?id=<%=data[i].id%>" title=""><i class="fa fa-eye"></i><%=data[i].views%></a></small>
