--- a/views/Partials/_navbar.ejs
+++ b/views/Partials/_navbar.ejs
@@ -137,7 +137,7 @@
                         <a class="nav-link" href="/Video">Videos</a>
                     </li> -->
                     <li class="nav-item">
-                        <a class="nav-link" href="/reviews">Reviews</a>
+                        <a class="nav-link" href="/reviews">Blogs</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/contact">Contact Us</a>
