--- a/views/tech-category-03.ejs
+++ b/views/tech-category-03.ejs
@@ -55,13 +55,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                        <h2><i class="fa fa-star bg-orange"></i> Reviews <small class="hidden-xs-down hidden-sm-down"></small></h2>
+                        <h2><i class="fa fa-star bg-orange"></i> Blogs <small class="hidden-xs-down hidden-sm-down"></small></h2>
                     </div><!-- end col -->
                     <div class="col-lg-4 col-md-4 col-sm-12 hidden-xs-down hidden-sm-down">
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item"><a href="/">Home</a></li>
                             <li class="breadcrumb-item"><a href="#">Blog</a></li>
-                            <li class="breadcrumb-item active">Reviews</li>
+                            
                         </ol>
                     </div><!-- end col -->                    
                 </div><!-- end row -->
@@ -74,7 +74,7 @@
                     <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
                         <div class="page-wrapper">
                             <div class="blog-list clearfix">
-                                <% reviews.forEach(e=>{%>
+                                <% data.forEach(e=>{%>
                                 <div class="blog-box row">
                                     
                                     <div class="col-md-4">
@@ -103,7 +103,7 @@
 
                         <hr class="invis">
 
-                        <div class="row">
+                        <!-- <div class="row">
                             <div class="col-md-12">
                                 <nav aria-label="Page navigation">
                                     <ul class="pagination justify-content-start">
@@ -116,7 +116,7 @@
                                     </ul>
                                 </nav>
                             </div><!-- end col -->
-                        </div><!-- end row -->
+                        <!-- </div>end row --> 
                     </div><!-- end col -->
 
                     <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
