--- a/views/Partials/_navbar.ejs
+++ b/views/Partials/_navbar.ejs
@@ -11,7 +11,7 @@
                         <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item dropdown has-submenu menu-large hidden-md-down hidden-sm-down hidden-xs-down">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">News</a>
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Category</a>
                         <ul class="dropdown-menu megamenu" aria-labelledby="dropdown01">
                             <li>
                                 <div class="container">
