--- a/views/tech-single.ejs
+++ b/views/tech-single.ejs
@@ -214,7 +214,7 @@
                                         <div class="blog-box">
                                             <div class="post-media">
                                                 <a href="/single?id=<%=blog[4].id%>" title="">
-                                                    <img src="<%=blog[4].banner%>" alt="" class="img-fluid">
+                                                    <img src="<%=blog[4].banner%>" alt="" class="img-fluid" style="width: 600px; height: 300px;">
                                                     <div class="hovereffect">
                                                         <span class=""></span>
                                                     </div><!-- end hover -->
@@ -232,7 +232,7 @@
                                         <div class="blog-box">
                                             <div class="post-media">
                                                 <a href="/single?id=<%=blog[5].id%>" title="">
-                                                    <img src="<%=blog[5].banner%>" alt="" class="img-fluid">
+                                                    <img src="<%=blog[5].banner%>" alt="" class="img-fluid" style="width: 600px; height: 300px;">
                                                     <div class="hovereffect">
                                                         <span class=""></span>
                                                     </div><!-- end hover -->
