--- a/views/Partials/_footer.ejs
+++ b/views/Partials/_footer.ejs
@@ -31,11 +31,11 @@
                     <h2 class="widget-title">Popular Categories</h2>
                     <div class="link-widget">
                         <ul>
-                            <li><a href="#">Science</a></li>
-                            <li><a href="#">Technology</a></li>
-                            <li><a href="#">Reviews</a></li>
-                            <li><a href="#">Hacking </a></li>
-                            <li><a href="#">Blogging <span></span></a></li>
+                            <li><a href="/reviews">Science</a></li>
+                            <li><a href="/reviews">Technology</a></li>
+                            <li><a href="/reviews">Reviews</a></li>
+                            <li><a href="/reviews">Hacking </a></li>
+                            <li><a href="/reviews">Blogging <span></span></a></li>
                         </ul>
                     </div><!-- end link-widget -->
                 </div><!-- end widget -->
