--- a/views/Partials/_navbar.ejs
+++ b/views/Partials/_navbar.ejs
@@ -139,9 +139,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/reviews">Blogs</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="/contact">Contact Us</a>
-                    </li>
+                    </li> -->
                 </ul>
                 <ul class="navbar-nav mr-2">
                     <li class="nav-item">
