--- a/views/tech-single.ejs
+++ b/views/tech-single.ejs
@@ -187,7 +187,7 @@
                                 <h4 class="small-title">About author</h4>
                                 <div class="row">
                                     <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
-                                        <img width="100px" height="100px" src="<%=author.profilePic%>" alt="" class="img-fluid rounded-circle" > 
+                                        <img  src="<%=author.profilePic%>" alt="" class="img-fluid rounded-circle" style="width:100px; height:100px;" > 
                                     </div><!-- end col -->
 
                                     <div class="col-lg-10 col-md-10 col-sm-10 col-xs-12 mt-3 ml-2">
