--- a/views/tech-category-03.ejs
+++ b/views/tech-category-03.ejs
@@ -104,7 +104,7 @@
                         <hr class="invis">
 
                         <!-- <div class="row">
-                            <div class="col-md-12">
+                            <div id="page" class="col-md-12">
                                 <nav aria-label="Page navigation">
                                     <ul class="pagination justify-content-start">
                                         <li class="page-item"><a class="page-link" href="#">1</a></li>
@@ -115,9 +115,9 @@
                                         </li>
                                     </ul>
                                 </nav>
-                            </div><!-- end col -->
-                        <!-- </div>end row --> 
-                    </div><!-- end col -->
+                            </div> end col -->
+                       <!-- </div> --> 
+                    </div><!-- end col
 
                     <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
                         <div class="sidebar">
